--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "gh-pages": "^6.1.1",
     "jquery": "3.6.0",
     "perfect-scrollbar": "1.5.5",
-    "react": ">=16.8.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "3.0.3",
-    "react-dom": ">=16.8.0",
+    "react-dom": "^18.3.1",
     "react-notification-alert": "0.0.13",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
@@ -33,10 +33,6 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
-  },
   "browserslist": [
     ">0.2%",
     "not dead",
@@ -47,6 +43,7 @@
     "typescript": "4.7.4"
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9"
   }
